--- a/Proyecto_2/Style.css
+++ b/Proyecto_2/Style.css
@@ -27,6 +27,10 @@ body {
   flex-direction: row;
   justify-content: space-around;
 }
+.nameCard {
+  display: flex;
+  justify-content: space-around;
+}
 .Card {
   display: block;
   padding: 0.5rem;
