Interaccion del jugador en cartas

--- a/Proyecto_2/Style.css
+++ b/Proyecto_2/Style.css
@@ -1,5 +1,11 @@
 body {
-  background-color: rgba(28, 119, 28, 0.5);
+  background-image: url(/Back_ground_img.jpg);
+  background-color: transparent;
+}
+#title{
+    background-image: url(/Poker_title.PNG);
+    background-size: contain;
+    size: auto;
 }
 #CardZone {
   display: flex;
@@ -55,3 +61,4 @@ div div {
   text-align: center;
   border: 0.5px solid black;
 }
+
