--- a/Proyecto_3/title_guess/src/apis/home.scss
+++ b/Proyecto_3/title_guess/src/apis/home.scss
@@ -31,10 +31,10 @@
 
 #country {
   margin-top: 275px;
-  margin-right: 600px;
+  margin-left: 60rem;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: baseline;
 }
 
