--- a/Proyecto_3/title_guess/src/apis/new.scss
+++ b/Proyecto_3/title_guess/src/apis/new.scss
@@ -26,7 +26,11 @@
     margin: 0.2em auto;
   }
 }
-
+.hidden {
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
+}
 .news {
   display: flex;
   justify-content: space-around;
